letSubstitution/TamarinruleParser.py
# Generated from Tamarinrule.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class TamarinruleParser ( Parser ):

    grammarFileName = "Tamarinrule.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "'='", "'['", "']'", "'-->'", "'--['", 
                     "']->'", "'('", "')'", "','", "'<'", "'>'", "'^'", 
                     "'!'", "'~'", "'$'", "'''", "'~''", "'\u25B6'", "'\u2225'", 
                     "'let'", "'rule'", "'in'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "SQUOTE", "TILDQ", "PLAY", "BAR", "LET", 
                      "RULE", "IN", "Identifier", "Digit", "Letter", "LetterNum", 
                      "WS", "COMMENT", "LINE_COMMENT" ]

    RULE_rules = 0
    RULE_protoRule = 1
    RULE_letBlock = 2
    RULE_definition = 3
    RULE_genericRule = 4
    RULE_fact = 5
    RULE_factList = 6
    RULE_term = 7
    RULE_termList = 8
    RULE_factIdentifier = 9
    RULE_varIdentifier = 10

    ruleNames =  [ "rules", "protoRule", "letBlock", "definition", "genericRule", 
                   "fact", "factList", "term", "termList", "factIdentifier", 
                   "varIdentifier" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    SQUOTE=17
    TILDQ=18
    PLAY=19
    BAR=20
    LET=21
    RULE=22
    IN=23
    Identifier=24
    Digit=25
    Letter=26
    LetterNum=27
    WS=28
    COMMENT=29
    LINE_COMMENT=30

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class RulesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def protoRule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TamarinruleParser.ProtoRuleContext)
            else:
                return self.getTypedRuleContext(TamarinruleParser.ProtoRuleContext,i)


        def getRuleIndex(self):
            return TamarinruleParser.RULE_rules

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRules" ):
                return visitor.visitRules(self)
            else:
                return visitor.visitChildren(self)




    def rules(self):

        localctx = TamarinruleParser.RulesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_rules)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==TamarinruleParser.RULE:
                self.state = 22
                self.protoRule()
                self.state = 27
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProtoRuleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RULE(self):
            return self.getToken(TamarinruleParser.RULE, 0)

        def Identifier(self):
            return self.getToken(TamarinruleParser.Identifier, 0)

        def genericRule(self):
            return self.getTypedRuleContext(TamarinruleParser.GenericRuleContext,0)


        def letBlock(self):
            return self.getTypedRuleContext(TamarinruleParser.LetBlockContext,0)


        def getRuleIndex(self):
            return TamarinruleParser.RULE_protoRule

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProtoRule" ):
                return visitor.visitProtoRule(self)
            else:
                return visitor.visitChildren(self)




    def protoRule(self):

        localctx = TamarinruleParser.ProtoRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_protoRule)
        try:
            self.state = 38
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 28
                self.match(TamarinruleParser.RULE)
                self.state = 29
                self.match(TamarinruleParser.Identifier)
                self.state = 30
                self.match(TamarinruleParser.T__0)
                self.state = 31
                self.genericRule()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 32
                self.match(TamarinruleParser.RULE)
                self.state = 33
                self.match(TamarinruleParser.Identifier)
                self.state = 34
                self.match(TamarinruleParser.T__0)
                self.state = 35
                self.letBlock()
                self.state = 36
                self.genericRule()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LetBlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(TamarinruleParser.LET, 0)

        def IN(self):
            return self.getToken(TamarinruleParser.IN, 0)

        def definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TamarinruleParser.DefinitionContext)
            else:
                return self.getTypedRuleContext(TamarinruleParser.DefinitionContext,i)


        def getRuleIndex(self):
            return TamarinruleParser.RULE_letBlock

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLetBlock" ):
                return visitor.visitLetBlock(self)
            else:
                return visitor.visitChildren(self)




    def letBlock(self):

        localctx = TamarinruleParser.LetBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_letBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(TamarinruleParser.LET)
            self.state = 42 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 41
                self.definition()
                self.state = 44 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TamarinruleParser.T__7) | (1 << TamarinruleParser.T__10) | (1 << TamarinruleParser.T__14) | (1 << TamarinruleParser.T__15) | (1 << TamarinruleParser.SQUOTE) | (1 << TamarinruleParser.Identifier))) != 0)):
                    break

            self.state = 46
            self.match(TamarinruleParser.IN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TamarinruleParser.TermContext)
            else:
                return self.getTypedRuleContext(TamarinruleParser.TermContext,i)


        def getRuleIndex(self):
            return TamarinruleParser.RULE_definition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinition" ):
                return visitor.visitDefinition(self)
            else:
                return visitor.visitChildren(self)




    def definition(self):

        localctx = TamarinruleParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_definition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.term(0)
            self.state = 49
            self.match(TamarinruleParser.T__1)
            self.state = 50
            self.term(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GenericRuleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factList(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TamarinruleParser.FactListContext)
            else:
                return self.getTypedRuleContext(TamarinruleParser.FactListContext,i)


        def getRuleIndex(self):
            return TamarinruleParser.RULE_genericRule

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGenericRule" ):
                return visitor.visitGenericRule(self)
            else:
                return visitor.visitChildren(self)




    def genericRule(self):

        localctx = TamarinruleParser.GenericRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_genericRule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(TamarinruleParser.T__2)
            self.state = 53
            self.factList()
            self.state = 54
            self.match(TamarinruleParser.T__3)
            self.state = 60
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TamarinruleParser.T__4]:
                self.state = 55
                self.match(TamarinruleParser.T__4)
                pass
            elif token in [TamarinruleParser.T__5]:
                self.state = 56
                self.match(TamarinruleParser.T__5)
                self.state = 57
                self.factList()
                self.state = 58
                self.match(TamarinruleParser.T__6)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 62
            self.match(TamarinruleParser.T__2)
            self.state = 63
            self.factList()
            self.state = 64
            self.match(TamarinruleParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FactContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factIdentifier(self):
            return self.getTypedRuleContext(TamarinruleParser.FactIdentifierContext,0)


        def termList(self):
            return self.getTypedRuleContext(TamarinruleParser.TermListContext,0)


        def getRuleIndex(self):
            return TamarinruleParser.RULE_fact

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFact" ):
                return visitor.visitFact(self)
            else:
                return visitor.visitChildren(self)




    def fact(self):

        localctx = TamarinruleParser.FactContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_fact)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.factIdentifier()
            self.state = 67
            self.match(TamarinruleParser.T__7)
            self.state = 68
            self.termList()
            self.state = 69
            self.match(TamarinruleParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FactListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fact(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TamarinruleParser.FactContext)
            else:
                return self.getTypedRuleContext(TamarinruleParser.FactContext,i)


        def getRuleIndex(self):
            return TamarinruleParser.RULE_factList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactList" ):
                return visitor.visitFactList(self)
            else:
                return visitor.visitChildren(self)




    def factList(self):

        localctx = TamarinruleParser.FactListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_factList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==TamarinruleParser.T__13 or _la==TamarinruleParser.Identifier:
                self.state = 71
                self.fact()
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==TamarinruleParser.T__9:
                    self.state = 72
                    self.match(TamarinruleParser.T__9)
                    self.state = 73
                    self.fact()
                    self.state = 78
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TermContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def termList(self):
            return self.getTypedRuleContext(TamarinruleParser.TermListContext,0)


        def varIdentifier(self):
            return self.getTypedRuleContext(TamarinruleParser.VarIdentifierContext,0)


        def Identifier(self):
            return self.getToken(TamarinruleParser.Identifier, 0)

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TamarinruleParser.TermContext)
            else:
                return self.getTypedRuleContext(TamarinruleParser.TermContext,i)


        def getRuleIndex(self):
            return TamarinruleParser.RULE_term

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)



    def term(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = TamarinruleParser.TermContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_term, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 82
                self.match(TamarinruleParser.T__10)
                self.state = 83
                self.termList()
                self.state = 84
                self.match(TamarinruleParser.T__11)
                pass

            elif la_ == 2:
                self.state = 86
                self.varIdentifier()
                pass

            elif la_ == 3:
                self.state = 87
                self.match(TamarinruleParser.Identifier)
                self.state = 88
                self.match(TamarinruleParser.T__7)
                self.state = 89
                self.termList()
                self.state = 90
                self.match(TamarinruleParser.T__8)
                pass

            elif la_ == 4:
                self.state = 92
                self.match(TamarinruleParser.T__7)
                self.state = 93
                self.term(0)
                self.state = 94
                self.match(TamarinruleParser.T__8)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 103
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = TamarinruleParser.TermContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_term)
                    self.state = 98
                    if not self.precpred(self._ctx, 4):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                    self.state = 99
                    self.match(TamarinruleParser.T__12)
                    self.state = 100
                    self.term(5) 
                self.state = 105
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class TermListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TamarinruleParser.TermContext)
            else:
                return self.getTypedRuleContext(TamarinruleParser.TermContext,i)


        def getRuleIndex(self):
            return TamarinruleParser.RULE_termList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTermList" ):
                return visitor.visitTermList(self)
            else:
                return visitor.visitChildren(self)




    def termList(self):

        localctx = TamarinruleParser.TermListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_termList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TamarinruleParser.T__7) | (1 << TamarinruleParser.T__10) | (1 << TamarinruleParser.T__14) | (1 << TamarinruleParser.T__15) | (1 << TamarinruleParser.SQUOTE) | (1 << TamarinruleParser.Identifier))) != 0):
                self.state = 106
                self.term(0)
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==TamarinruleParser.T__9:
                    self.state = 107
                    self.match(TamarinruleParser.T__9)
                    self.state = 108
                    self.term(0)
                    self.state = 113
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FactIdentifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(TamarinruleParser.Identifier, 0)

        def getRuleIndex(self):
            return TamarinruleParser.RULE_factIdentifier

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactIdentifier" ):
                return visitor.visitFactIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def factIdentifier(self):

        localctx = TamarinruleParser.FactIdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_factIdentifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TamarinruleParser.Identifier]:
                self.state = 116
                self.match(TamarinruleParser.Identifier)
                pass
            elif token in [TamarinruleParser.T__13]:
                self.state = 117
                self.match(TamarinruleParser.T__13)
                self.state = 118
                self.match(TamarinruleParser.Identifier)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarIdentifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(TamarinruleParser.Identifier, 0)

        def SQUOTE(self, i:int=None):
            if i is None:
                return self.getTokens(TamarinruleParser.SQUOTE)
            else:
                return self.getToken(TamarinruleParser.SQUOTE, i)

        def getRuleIndex(self):
            return TamarinruleParser.RULE_varIdentifier

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarIdentifier" ):
                return visitor.visitVarIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def varIdentifier(self):

        localctx = TamarinruleParser.VarIdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_varIdentifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TamarinruleParser.Identifier]:
                self.state = 121
                self.match(TamarinruleParser.Identifier)
                pass
            elif token in [TamarinruleParser.T__14]:
                self.state = 122
                self.match(TamarinruleParser.T__14)
                self.state = 123
                self.match(TamarinruleParser.Identifier)
                pass
            elif token in [TamarinruleParser.SQUOTE]:
                self.state = 124
                self.match(TamarinruleParser.SQUOTE)
                self.state = 125
                self.match(TamarinruleParser.Identifier)
                self.state = 126
                self.match(TamarinruleParser.SQUOTE)
                pass
            elif token in [TamarinruleParser.T__15]:
                self.state = 127
                self.match(TamarinruleParser.T__15)
                self.state = 128
                self.match(TamarinruleParser.Identifier)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[7] = self.term_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def term_sempred(self, localctx:TermContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 4)
         




